--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.6.2",
     "nodemailer-mailgun-transport": "^2.1.3",
+    "pug": "^3.0.2",
     "slugify": "^1.5.3",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
